ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/custom-container.less
.custom-container {
  padding: 0;

  .gu-custom-container {
    margin-top: 3.125rem;
    .fsi-container {
      background: var(--pre-next-bg);
      border-top: 1px solid var(--light-grey-border);
      padding: 1.25rem 1rem;
    }
    .col-6grid {
      -webkit-box-flex: 0;
      -webkit-flex: 0 0 50%;
      -ms-flex: 0 0 50%;
      flex: 0 0 100%;
      max-width: 100%;
    }
  }
}
@media (min-width: 1024px) {
  .custom-container {
    padding: 0;
    .gu-custom-container {
      margin-top: 4.375rem;
      display: flex;
      border-top: 1px solid var(--light-grey-border);
      .col-3grid {
        padding: 1.25rem 0;
        display: flex;
        -webkit-box-flex: 0;
        max-width: 25%;
        flex: 0 0 25%;
        .outer-container {
          width: 100%;
          position: sticky;
          top: 70px;
          max-height: 100vh;
          display: flex;
          flex-direction: column;
        }
        &.col-3grid--left {
          overflow: visible;
          max-height: unset;
          margin-inline: 0;
          max-width: 25%;
          flex: 0 0 25%;
        }
      }
      .col-6grid {
        border: 1px solid var(--light-grey-border);
        border-top: none;
        -webkit-box-flex: 0;
        -webkit-flex: 0 0 50%;
        -ms-flex: 0 0 50%;
        flex: 0 0 50%;
        max-width: 50%;
        .home-banner {
          border-radius: 0;
          box-shadow: none;
          border: none;
        }
        &.collapsed {
          max-width: 68%;
          flex: 0 0 68%;
        }
      }
      .col-3grid {
        display: flex;
        -webkit-box-flex: 0;
        -webkit-flex: 0 0 25%;
        -ms-flex: 0 0 25%;
        flex: 0 0 25%;
        max-width: 25%;
        margin: 0;
        min-height: 40rem;
        height: auto;
        max-height: calc(100vh - 5rem);
        overflow: auto;

        &--right {
          position: sticky;
          top: 10%;
          margin: 0;
          padding: 0.5rem 1.25rem;
          flex-direction: column;
          justify-content: space-between;
          min-height: 40rem;
          height: fit-content;
          max-height: calc(100vh - 20rem);
          overflow: auto;
          box-shadow: 0 0 1.5rem 0.25rem var(--dark-shadow);
          background-color: var(--pre-next-bg);
          border-radius: 0.75rem;

          .tableofcontents {
            display: block;
          }

          &.collapsed {
            flex: 0 0 7%;
            max-width: 7%;
            box-shadow: none;
            border-radius: 0;
            margin: 0;
            background-color: transparent;
            height: auto;

            > div:not(.tableofcontents) {
              display: none;
            }

            .tableofcontents {
              display: flex;
              justify-content: center;
            }

            .gu-toc__title {
              display: none;
            }

            .gu-toc__col-icon {
              transform: rotate(180deg);
            }

            .cmp-toc__content {
              display: none;
            }
          }
        }
      }
      .fsi-container {
        background: var(--pre-next-bg);
        border-top: 1px solid var(--light-grey-border);
        padding: 1.5rem 1rem;

        .aem-Grid {
          display: flex;
        }
      }
      &.left-collapsed {
        .col-3grid--left {
          flex: 0 0 7%;
        }
        .col-6grid {
          flex: 0 0 68%;
        }
        .col-3grid--right {
          flex: 0 0 25%;
        }
        .col-6grid.collapsed {
          flex: 0 0 86%;
          max-width: 86%;
        }
        .cmp-navigation-filter__wrapper {
          justify-content: center;
        }
      }
    }
  }
}

